# whitebox-wasm

./: .gitignore  Cargo.toml  LICENSE-MIT  MAINTAINING.md  README.md
crates/wbgeotiff/: Cargo.toml  README.md
crates/wbgeotiff/src/: cog.rs  compression.rs  error.rs  geo_keys.rs  ifd.rs  lib.rs  mod.rs  reader.rs  tags.rs  types.rs  writer.rs
crates/wbhdf/: Cargo.toml  README.md
crates/wbhdf/src/: attributes.rs  btree.rs  compare.rs  dataset.rs  datatypes.rs  error.rs  filters.rs  fixtures.rs  hdf4.rs  lib.rs  object_header.rs  superblock.rs
crates/wblidar/: Cargo.toml  README.md
crates/wblidar/src/: crs.rs  error.rs  frontend.rs  hdf_adapter.rs  hdf_products.rs  io.rs  lib.rs  memory_store.rs  point.rs  reproject.rs
crates/wblidar/src/copc/: hierarchy.rs  mod.rs  range_io.rs  reader.rs  writer.rs
crates/wblidar/src/e57/: crc.rs  mod.rs  page.rs  reader.rs  writer.rs  xml.rs
crates/wblidar/src/las/: header.rs  mod.rs  reader.rs  vlr.rs  writer.rs
crates/wblidar/src/laz/: arithmetic_decoder.rs  arithmetic_encoder.rs  arithmetic_model.rs  chunk.rs  codec.rs  integer_codec.rs  laszip_chunk_table.rs  mod.rs  reader.rs  standard_point10.rs  standard_point10_write.rs  standard_point14.rs  writer.rs
crates/wblidar/src/laz/fields/: mod.rs  point10.rs  point14.rs
crates/wblidar/src/ply/: mod.rs  reader.rs  writer.rs
crates/wbprojection/: Cargo.toml  README.md
crates/wbprojection/src/: compound_crs.rs  crs.rs  datum.rs  ellipsoid.rs  epsg.rs  epsg_generated_info.rs  epsg_generated_wkt.rs  error.rs  grid_formats.rs  grid_shift.rs  legacy_parity_wkt.rs  lib.rs  operations.rs  proj_string.rs  transform.rs  vertical_grid.rs  wkt.rs
crates/wbprojection/src/projections/: aitoff.rs  albers.rs  axis_oriented.rs  azimuthal_equidistant.rs  behrmann.rs  bonne.rs  cassini.rs  central_conic.rs  collignon.rs  craster.rs  cylindrical_equal_area.rs  eckert_i.rs  eckert_ii.rs  eckert_iii.rs  eckert_iv.rs  eckert_v.rs  eckert_vi.rs  equal_earth.rs  equirectangular.rs  euler.rs  fahey.rs  foucaut.rs  gall_peters.rs  gall_stereographic.rs  geocentric.rs  geographic.rs  geostationary.rs  gnomonic.rs  hammer.rs  hatano.rs  hobo_dyer.rs  hotine_oblique_mercator.rs  kavrayskiy_v.rs  kavrayskiy_vii.rs  krovak.rs  lagrange.rs  lambert_azimuthal_equal_area.rs  lambert_conformal_conic.rs  loximuthal.rs  mbt_fps.rs  (+51 more)
crates/wbprojection/src/tests/: authoritative_tests.rs  epsg_tests.rs  integration_tests.rs  mod.rs
crates/wbraster/: Cargo.toml
crates/wbraster/src/: color_math.rs  crs_info.rs  error.rs  io_utils.rs  lib.rs  memory_store.rs  raster.rs
crates/wbraster/src/formats/: dted.rs  envi.rs  er_mapper.rs  esri_ascii.rs  esri_binary.rs  esri_float.rs  geopackage.rs  geopackage_sqlite.rs  geotiff.rs  grass_ascii.rs  hfa.rs  idrisi.rs  jpeg2000.rs  jpeg2000_validation_tests.rs  mod.rs  pcraster.rs  png_jpeg.rs  saga.rs  surfer.rs  xyz.rs  zarr.rs  zarr_v3.rs
crates/wbraster/src/formats/jpeg2000_core/: boxes.rs  codestream.rs  entropy.rs  error.rs  geo_meta.rs  mod.rs  reader.rs  types.rs  wavelet.rs  writer.rs
crates/wbspatialstats/: Cargo.toml  README.md
crates/wbspatialstats/src/: lib.rs
crates/wbspatialstats/src/autocorrelation/: mod.rs  permutation.rs
crates/wbspatialstats/src/cv/: mod.rs
crates/wbspatialstats/src/density_estimation/: mod.rs
crates/wbspatialstats/src/kriging/: cokriging.rs  local.rs  mod.rs  prediction_intervals.rs  simple.rs  st_kriging.rs  universal.rs
crates/wbspatialstats/src/point_process/: diagnostics.rs  envelopes.rs  inhomogeneous.rs  mod.rs  ripley.rs
crates/wbspatialstats/src/regression/: diagnostics.rs  gwr.rs  matrix_solvers.rs  mod.rs  spatial_error.rs  spatial_lag.rs  test_data.rs
crates/wbspatialstats/src/variogram/: cross_variogram.rs  directional.rs  empirical.rs  mod.rs  model.rs  robust.rs
crates/wbspatialstats/src/weights/: mod.rs
crates/wbtools_oss/: Cargo.toml
crates/wbtools_oss/src/: lib.rs  memory_store.rs  palettes.rs
crates/wbtools_oss/src/rendering/: histogram.rs  line_graph.rs  mod.rs  radial_line_graph.rs  scattergram.rs
crates/wbtools_oss/src/tools/: generated_param_docs.json  mod.rs  param_docs.rs  raster_stack_validator.rs
crates/wbtools_oss/src/tools/data_tools/: mod.rs
crates/wbtools_oss/src/tools/flow_algorithms/: mod.rs
crates/wbtools_oss/src/tools/geomorphometry/: basic_terrain_tools.rs  contour_tools.rs  curvature_tools.rs  dem_void_filling.rs  hydrologic_index_tools.rs  mod.rs  multiscale_curvatures.rs  openness.rs  pro_curvature_tools.rs  sky_visibility_tools.rs  terrain_analysis_tools.rs  terrain_window_tools.rs
crates/wbtools_oss/src/tools/geostats/: cross_validation.rs  directional_variogram.rs  mod.rs  ordinary_cokriging.rs  ordinary_kriging.rs  variogram_fitting.rs  (+1 more)
crates/wbtopology/: Cargo.toml  README.md
crates/wbtopology/src/: buffer_op.rs  constructive.rs  error.rs  fast_triangulation.rs  fixed_radius_search.rs  geom.rs  graph.rs  hull.rs  io.rs  lib.rs  natural_neighbour.rs  noding.rs  overlay.rs  precision.rs  relate.rs  spatial_index.rs  topology.rs  triangulation.rs  vector_io.rs  voronoi.rs
crates/wbtopology/src/algorithms/: distance.rs  measurements.rs  mod.rs  orientation.rs  point_in_ring.rs  segment.rs  simplify.rs  transform.rs
crates/wbvector/: Cargo.toml  README.md
crates/wbvector/src/: crs.rs  error.rs  feature.rs  geometry.rs  lib.rs  memory_store.rs  reproject.rs
crates/wbvector/src/flatgeobuf/: feature_generated.rs  mod.rs
crates/wbvector/src/geojson/: mod.rs
crates/wbvector/src/geopackage/: mod.rs  sqlite.rs
crates/wbvector/src/geoparquet/: mod.rs
crates/wbvector/src/gml/: mod.rs
crates/wbvector/src/gpx/: mod.rs
crates/wbvector/src/kml/: mod.rs
crates/wbvector/src/kmz/: mod.rs
crates/wbvector/src/mapinfo/: mod.rs
crates/wbvector/src/osmpbf/: mod.rs
crates/wbvector/src/shapefile/: mod.rs
crates/wbvector/src/topojson/: mod.rs
crates/whitebox-cli/: Cargo.toml
crates/whitebox-cli/src/: main.rs
crates/whitebox-wasm/: Cargo.toml  README.md  tools.d.ts  tools.mjs
crates/whitebox-wasm/src/: analysis.rs  lib.rs  lidar.rs  vector.rs
(+91 files in other folders)
