[package]
name = "wbhdf"
version = "0.1.0"
edition = "2021"
authors = ["John Lindsay, Whitebox Geospatial Inc."]
description = "Scoped pure-Rust HDF container reader for Whitebox Next Gen"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jblindsay/whitebox_next_gen"
homepage = "https://github.com/jblindsay/whitebox_next_gen"
documentation = "https://docs.rs/wbhdf"
exclude = [
    "tests/fixtures/**",
]
keywords = ["gis", "hdf5", "hdf4", "geospatial", "remote-sensing"]
categories = ["science", "parser-implementations", "filesystem"]

[lib]
name = "wbhdf"
path = "src/lib.rs"

[dependencies]
byteorder = "1.5"
flate2 = "1"
miniz_oxide = "0.8"
thiserror = "1"

