[package]
name = "wbraster"
version = "0.2.0"
edition = "2021"
authors = ["John Lindsay, Whitebox Geospatial Inc."]
description = "A pure-Rust library for reading and writing raster GIS formats"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jblindsay/whitebox_next_gen"
homepage = "https://github.com/jblindsay/whitebox_next_gen"
documentation = "https://docs.rs/wbraster"
exclude = ["dev/"]
keywords = ["gis", "raster", "geospatial", "grid", "remote-sensing"]
categories = ["science", "encoding", "filesystem"]

[lib]
name = "wbraster"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
flate2 = "1.1.9"
tar = "0.4.45"
zip = { version = "8.5.1", default-features = false, features = ["deflate"] }
ruzstd = "0.8.2"
lz4_flex = "0.13.0"
jpeg-encoder = "0.7.0"
jpeg-decoder = "0.3.2"
png = "0.18.1"
thiserror = "2.0.18"
rayon = "1.12.0"
wide = "1.3.0"
wbprojection = { path = "../wbprojection", version = "0.3.0" }
wbgeotiff = { path = "../wbgeotiff", version = "0.1.2" }
wbhdf = { path = "../wbhdf", version = "0.1.0" }

