[package]
name = "wbtopology"
version = "0.2.0"
edition = "2021"
authors = ["John Lindsay, Whitebox Geospatial Inc."]
description = "A pure-Rust topology suite inspired by JTS"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jblindsay/whitebox_next_gen"
homepage = "https://github.com/jblindsay/whitebox_next_gen"
documentation = "https://docs.rs/wbtopology"
exclude = ["dev/"]
keywords = ["topology", "geometry", "gis", "jts", "spatial"]
categories = ["algorithms", "science::geo"]

[lib]
name = "wbtopology"
path = "src/lib.rs"

[dependencies]
wbvector = { path = "../wbvector", version = "0.1.4" }
rayon = { version = "1.10", optional = true }
robust = "1.2.0"

[features]
default = []
parallel = ["dep:rayon"]

