[package]
name = "whitebox-wasm"
version = "0.4.0"
edition = "2021"
description = "Pure-Rust geospatial toolkit (raster, vector, LiDAR, projections) compiled to WebAssembly"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/opengeos/whitebox-wasm"
homepage = "https://github.com/opengeos/whitebox-wasm"
keywords = ["geospatial", "wasm", "gis", "geotiff", "lidar"]
categories = ["wasm", "science"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wbgeotiff = { path = "../wbgeotiff" }
wbprojection = { path = "../wbprojection", default-features = false }
wbvector = { path = "../wbvector", features = ["geoparquet", "kmz", "osmpbf"] }
wblidar = { path = "../wblidar" }
wbtopology = { path = "../wbtopology" }
wbspatialstats = { path = "../wbspatialstats" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

# The wasm-opt bundled with some wasm-pack versions predates bulk-memory being
# on by default in LLVM output. Enable the features the toolchain now emits.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O', '--enable-bulk-memory', '--enable-nontrapping-float-to-int', '--enable-sign-ext', '--enable-mutable-globals']

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
